tests/paczka1/fuzzy1/52502372.err
Error in line 2: F8ry6ub7j S262 41,0
Error in line 3: F8ry6ub7j A101 74,2
Error in line 20: yoiddxD A203 17,6
Error in line 32: yoiddxD A203 62,2
